# knu-notice-v2

./: .env.backup  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  LICENSE  README.md  RENDER_ENV_VARS.md  build.sh  celery.py  cert.crt  cert.key  crawled_data.json  main.py  manage.py  pyproject.toml  render.yaml  requirements.txt  script.js
.github/workflows/: crawl.yml  manual-crawl.yml  test-migration.yml
knu_notice/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
knu_notice/templates/notices/: index.html
notices/: debug_views.py  import_views.py  manual_crawl.py  models.py  sync_views.py  tasks.py  urls.py  views.py
notices/management/commands/: __init__.py  add_dummy_data.py  crawl_notices.py  export_data.py  setup_periodic_tasks.py  sync_to_render.py  update_display_order.py
notices/migrations/: 0001_initial.py  0002_alter_notice_options_notice_display_order.py  0003_alter_notice_options_alter_noticeboard_options_and_more.py
notices/src/: crawler.py  import_views.py  tasks.py  urls.json
notices/static/css/: style.css
notices/static/js/: script.js
notices/templates/: index.html
static/css/: style.css
static/js/: proxy.js
staticfiles/css/: style.css
