[project]
name = "knu-notice-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "celery>=5.5.3",
    "dj-database-url>=3.0.1",
    "django>=5.2.4",
    "django-celery-beat>=2.8.1",
    "django-extensions>=4.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pyopenssl>=25.1.0",
    "python-dotenv>=1.1.1",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "webdriver-manager>=4.0.2",
    "werkzeug>=3.1.3",
    "whitenoise>=6.9.0",
]
