[project]
name = "knu-notice-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "django>=5.2.4",
    "django-extensions>=4.1",
    "gunicorn>=23.0.0",
    "selenium>=4.34.2",
    "webdriver-manager>=4.0.2",
    "whitenoise>=6.9.0",
]
